--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    nav.navbar {
+        @apply fixed top-0 left-0 w-full bg-gray-400 flex justify-between items-center h-12 px-4 z-50;
+    }
+
+    nav.navbar #menus {
+        @apply absolute flex flex-col right-0 w-1/2 h-screen top-0 bg-red-400 overflow-y-auto transform translate-x-full transition-transform ease-in-out z-[60];
+    }
+
+    nav.navbar.active #menus {
+        @apply absolute flex flex-col right-0 w-1/2 h-screen top-0 bg-red-400 overflow-y-auto transform transition-transform ease-in-out z-[60] translate-x-0;
+    }
+
+    nav.navbar #backdrop {
+        @apply absolute z-[55] left-0 h-screen w-full top-0 transition-colors ease-in-out;
+    }
+
+    nav.navbar .account {
+        @apply flex items-center gap-2 px-4 py-3 hover:bg-black/20;
+    }
+
+    main {
+        @apply mt-12 p-4;
+    }
+}
