--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,28 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    body {
+        @apply overflow-x-hidden;
+    }
+}
+
 @layer components {
-    nav.navbar {
-        @apply fixed top-0 left-0 w-full bg-gray-400 flex justify-between items-center h-12 px-4 z-50;
+    #sidebar {
+        @apply fixed flex flex-col right-0 w-1/2 h-screen top-0 bg-red-400 overflow-y-auto transform translate-x-full transition-transform ease-in-out z-[60] lg:static lg:h-fit lg:w-[25rem] lg:translate-x-0 lg:z-40;
     }
 
-    nav.navbar #menus {
-        @apply absolute flex flex-col right-0 w-1/2 h-screen top-0 bg-red-400 overflow-y-auto transform translate-x-full transition-transform ease-in-out z-[60];
+    #sidebar.active {
+        @apply fixed flex flex-col right-0 w-1/2 h-screen top-0 bg-red-400 overflow-y-auto transform transition-transform ease-in-out z-[60] translate-x-0 lg:static lg:h-fit lg:w-[25rem] lg:z-40;
     }
 
-    nav.navbar.active #menus {
-        @apply absolute flex flex-col right-0 w-1/2 h-screen top-0 bg-red-400 overflow-y-auto transform transition-transform ease-in-out z-[60] translate-x-0;
+    #nav-backdrop {
+        @apply absolute z-[55] left-0 h-screen w-full top-0 transition-colors ease-in-out lg:hidden;
     }
 
-    nav.navbar #backdrop {
-        @apply absolute z-[55] left-0 h-screen w-full top-0 transition-colors ease-in-out;
-    }
-
-    nav.navbar .account {
+    #sidebar .account {
         @apply flex items-center gap-2 px-4 py-3 hover:bg-black/20;
     }
 
     main {
-        @apply mt-12 p-4;
+        @apply mt-12 p-4 mx-auto max-w-screen-lg w-full lg:flex lg:gap-4;
     }
 }
