--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -28,4 +28,8 @@
     main {
         @apply mt-12 p-4 mx-auto max-w-screen-lg w-full lg:flex lg:gap-4;
     }
+
+    main #content {
+        @apply w-full;
+    }
 }
